fixed the z-index for navbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,7 +16,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 4;
 }
 .nav-container.dark-mode {
   background-color: #474e68;
